--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
         <version>2.3.1</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.datastax.cassandra</groupId>
+        <artifactId>cassandra-drivers-core</artifactId>
+        <version>2.1.5</version>
+    </dependency>
     </dependencies>
 
 </project>
