--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-drivers-core</artifactId>
-            <version>2.1.5</version>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.6.0</version>
         </dependency>
 
         <dependency>
