last update of dockerfile

--- a/Dockerfile/Dockerfile
+++ b/Dockerfile/Dockerfile
@@ -40,5 +40,5 @@ RUN echo '#!/bin/bash' >> /start
 RUN echo 'cd /squiz.it/' >> /start
 RUN echo 'cd /squiz.it/' >> /start
 RUN echo 'mvn package' >> /start
-RUN echo 'java -jar target/squiz-1.0-SNAPSHOT.jar' >> /start
+RUN echo 'java -jar ./target/squiz-1.0-SNAPSHOT.jar' >> /start
 RUN chmod 777 /start
