--- a/squiz.it/pom.xml
+++ b/squiz.it/pom.xml
@@ -91,7 +91,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>src.sparkjava.Server</mainClass>
+                                    <mainClass>sparkjava.Server</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
